--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>StrAngularProjectBig</title>
+  <title>Teamgular Final Project</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,8 +13,6 @@
 
 <body>
   <app-root></app-root>
-
-
 </body>
 
 </html>
